# fastapi-htmx

./: .gitignore  database.db  docker-compose.yaml  manage.py  pyproject.toml  setup.sh
app/: __init__.py  admin.py  app.py  bkp.py  bkp2.py  database.py  depends.py  main.py  models.py  testing.py
app/tests/: core.py  hero.py  team.py
app/views/: core.py  hero.py  team.py
