[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Braden-Preston <bpfilmsinc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.88.0"}
typer = {extras = ["all"], version = "^0.7.0"}
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
djlint = "^1.19.9"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = "app/tests/**.py"
